# libqalculate

./: CMakeLists.txt  INSTALL.msvc  generate_definitions.cmake  generate_definitions.py
libqalculate/: BuiltinFunctions-number.cc  Calculator-definitions.cc  Calculator.cc  Calculator_p.h  Function.cc  MathStructure-gcd.cc  Number.cc  definitions.h  includes.h  util.cc
src/: defs2doc.cc  qalc.cc  unittest.cc
